👨‍💻 Refactor code by removing unused logger instances and simplifying UI component initialization